changed - Model relationships are now saved after the model. This will allow better interop with security and validation rules.