@@ -1,10 +1,0 @@
-import Firebase from 'firebase';
-
-export default function unstubFirebase() {
-  // Firebase.goOnline();
-
-  if (!Firebase.prototype.set.restore) {
-    Firebase.prototype.set.restore();
-    Firebase.prototype.update.restore();
-  }
-}
