@@ -28,7 +28,7 @@ describe("Integration: FirebaseAdapter - Finding Records", function() {
   describe("#init()", function() {
     it("has a Firebase ref", function() {
       assert(adapter._ref !== undefined);
-      assert(adapter._ref.toString().match(/^https\:\/\/emberfire\-demo\.firebaseio\.com/g));
+      assert(adapter._ref.toString().match(/^https\:\/\/emberfire\-tests\.firebaseio\.com/g));
     });
 
   });
